fixtures/invalid/python-pyproject-private-import/lib/python/consumer/public.py
from producer.internal import (
    hidden as _hidden,
)


def used():
    return _hidden()
